# naux-discord-bot

./: .env.example  .gitignore  README.md  main.py  pyproject.toml  requeriments.txt  run.py
.context/: command_list.md  naux_manual.md
api/: fastapi_app.py  webhook.py
bot/: commands.py  main.py
bot/commands/: automation.py  chat.py  discord_commands.py  quick_actions.py  voice_channel.py
bot/commands/legacy/: chat.py  general.py  smart_help.py  voice_channel.py
bot/commands/slash/: slash_chat.py  slash_info.py  slash_music.py
bot/core/: config.py
bot/core/llm/: chat_service.py  groq_adapter.py
bot/utils/: help_utils.py  limpieza.py  music_player.py  ui_helpers.py
bot/utils/dicts/: command_db.py  ia_prompt.py
core/: config.py  discord_client.py  groq_model.py
